# SampSharp.OpenMp.Streamer

./: .gitignore  .gitmodules  CMakeLists.txt  DynamicActor.cs  DynamicCheckpoint.cs  DynamicEntity.cs  DynamicMapIcon.cs  DynamicObject.cs  DynamicPickup.cs  DynamicTextLabel.cs  IStreamerService.cs  README.md  SampSharp.OpenMp.Streamer.csproj  StreamerDiagnostics.cs  StreamerEcsExtensions.cs  StreamerEventSystem.cs  StreamerService.cs
.github/workflows/: build.yml
Interop/: StreamerInterop.cs
native/: component.cpp  streamer-api.hpp
